--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user.html
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user.html
@@ -56,10 +56,45 @@
   </div>
   <div class="container-fluid">
     <div>
-     <h1>Greencoffee Control Panel</h1>
+       <h2>Manage Users</h1>
+       <a th:href="@{/users/new}">Create New User</a>    
+     </div>
+     <div th:if="${message !=null}" class="alert alert-success text-center">
+       [[${message}]]
+     </div>
+   <div>
+     <table class="table table-bordered table-striped table-hover table-responsive-xl">
+        <thead class="table-success">
+           <tr>
+              <th>User ID</th>          
+              <th>Photos</th>  
+               <th>Email</th>      
+              <th>First Name</th>       
+              <th>Last Name</th>      
+              <th>Roles</th>        
+              <th>Enabled</th>
+               <th></th>
+           </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user : ${listUsers}">
+        <td>[[${user.id}]]</td>
+        <td></td>
+        <td>[[${user.email}]]</td>
+        <td>[[${user.firstName}]]</td>
+        <td>[[${user.lastName}]]</td>
+        <td>[[${user.roles}]]</td>
+        <td>[[${user.enabled}]]</td>
+        <td>
+           Edit &nbsp; Delete
+        </td>
+        </tr>
+        </tbody>
+     </table>
    </div>
    
-    <div>
+   
+    <div class=text-center>
      <p>Greencoffee Control Panel Copyright &copy; Greencoffee</p>
    </div>
   </div>
