--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user_form.html
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user_form.html
@@ -4,8 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, intial-scale=1.0, minimum-scale=1.0">
 <title>Create New Users</title>
-<!-- <!--  --><link rel="stylesheet" type="text/css" th:href="@{webjars/bootstrap/css/bootstrap.min.css}"> -->
+<!-- <link rel="stylesheet" type="text/css" th:href="@{webjars/bootstrap/css/bootstrap.min.css}"> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
@@ -115,7 +116,7 @@
 				</div>
 				<div class="text-center">
 				<input type="submit" value="Save"  class="btn btn-primary mb-3">
-				<input type="button" value="Cancel" class="btn btn-dark mb-3">
+				<input type="button" value="Cancel" class="btn btn-secondary mb-3" id="buttonCancel">
 			   </div>
 			</div>
 		</form>
@@ -123,5 +124,13 @@
      <p>Greencoffee Control Panel Copyright &copy; Greencoffee</p>
    </div>
   </div>
+  <script type="text/javascript">
+     $(document).ready(function(){
+     $("#buttonCancel").on("click", function(){
+     window.location="[[@{/users}]]";
+  });
+});
+</script> 
 </body>
+
 </html>
