--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user_form.html
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user_form.html
@@ -64,7 +64,7 @@
    <form class="form-control form-control-lg" th:action="@{/users/save}" 
 		      method="post"
 			  style="max-width: 700px; margin: 0 auto"
-			  th:object="${user}"> 
+			  th:object="${user}" onsubmit="return checkEmailUnique(this);"> 
 			<div>
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Email</label>
@@ -130,6 +130,25 @@
      window.location="[[@{/users}]]";
   });
 });
+
+ function checkEmailUnique(form) {
+ url = "[[@{/users/check_email}]]";
+ userEmail = $("#email").val();
+ csrfValue = $("input[name='_csrf']").val();
+ params = {email: userEmail, _csrf: csrfValue};
+ 
+ $.post(url, params, function(response){
+    if (response == "OK"){
+        form.submit();
+    }else if(response == "Duplicated"){
+    
+        alert("There is another user having the same email " + userEmail);
+       }
+    });
+  
+    return false;
+ }
+ 
 </script> 
 </body>
 
