--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user_form.html
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user_form.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, intial-scale=1.0, minimum-scale=1.0">
 <title>Create New Users</title>
-<!-- <link rel="stylesheet" type="text/css" th:href="@{webjars/bootstrap/css/bootstrap.min.css}"> -->
+<!--  --> <link rel="stylesheet" type="text/css" th:href="@{webjars/bootstrap/css/bootstrap.min.css}"> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
@@ -120,7 +120,23 @@
 			   </div>
 			</div>
 		</form>
-    <div class=text-center>
+		 <div class="modal fade text-center"  id="modalDialog">
+		   <div class="modal-dialog">
+		      <div class="modal-content">
+		        <div class="modal-header">
+		           <h4 class="modal-title" id="modalTitle">Warning</h4>
+		           <button type="button" class="close" data-dismiss="modal">&times;</button>
+		         </div>
+		      <div class="modal-body">
+		       <span id="modalBody"></span>
+		      </div>
+		    <div class="modal-footer">
+		      <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+		    </div>
+		 </div>
+		 </div>
+		</div>
+      <div class=text-center>
      <p>Greencoffee Control Panel Copyright &copy; Greencoffee</p>
    </div>
   </div>
@@ -142,12 +158,18 @@
         form.submit();
     }else if(response == "Duplicated"){
     
-        alert("There is another user having the same email " + userByEmail);
+         showModalDialog("warning", "There is another user having the same email ");
        }
     });
   
     return false;
  }
+ 
+ function showModalDialog(title, message){
+     $("#modalTitle").text(title);
+      $("#modalBody").text(message);
+      $("#modalDialog").modal();
+   }
  
 </script> 
 </body>
