--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user_form.html
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user_form.html
@@ -3,12 +3,16 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, intial-scale=1.0, minimum-scale=1.0">
-<title>Create New Users</title>
+<title>[[${pageTitle}]]</title>
 <!--  --> <link rel="stylesheet" type="text/css" th:href="@{webjars/bootstrap/css/bootstrap.min.css}"> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+ <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+ <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 <body>
   <div class="container-fluid">
@@ -58,13 +62,14 @@
   </div>
   <div class="container-fluid">
     <div>
-     <h2>Manage Users Create New User</h2>
+     <h2>Manage Users | [[${pageTitle}]]</h2>
 
    </div>
    <form class="form-control form-control-lg" th:action="@{/users/save}" 
 		      method="post"
 			  style="max-width: 700px; margin: 0 auto"
 			  th:object="${user}" onsubmit="return checkEmailUnique(this);"> 
+			  <input type="hidden" th:field="*{id}"/>
 			<div>
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Email</label>
@@ -90,7 +95,9 @@
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Password</label>
 					<div class="col-sm-8">
-						<input type="password" class="form-control"  th:field="*{password}" required minlength="8" max-length="128"/>
+						<input th:if="${user.id == null}" type="password" class="form-control" th:field="*{password}" required minlength="8" max-length="20"/>
+						<input th:if="${user.id != null}" type="password" class="form-control" th:field="*{password}" minlength="8" max-length="20"/>
+						
 					</div>
 				</div>	
 				<div class="form-group row">
@@ -148,27 +155,36 @@
 });
 
  function checkEmailUnique(form) {
- url = "[[@{/users/check_email}]]";
- userByEmail = $("#email").val();
- csrfValue = $("input[name='_csrf']").val();
- params = {email: userByEmail, _csrf: csrfValue};
+     url = "[[@{/users/check_email}]]";
+     userByEmail = $("#email").val();
+     userId = $("#id").val();
+     csrfValue = $("input[name='_csrf']").val();
+     params = {id: userId,  email: userByEmail, _csrf: csrfValue};
+     
+ 
  
  $.post(url, params, function(response){
     if (response == "OK"){
         form.submit();
     }else if(response == "Duplicated"){
     
-         showModalDialog("warning", "There is another user having the same email ");
-       }
-    });
+    // alert("There is another user having the same email " + userByEmail);
+    
+      showModalDialog("Warning", "There is another user having the same email " + userByEmail);
+      } else {
+         showModalDialog("Error", "Unknown response from server ");
+         }
+      }).fail(function(){
+       showModalDialog("Error", "Could not connect to server ");
+      });
   
     return false;
  }
  
  function showModalDialog(title, message){
-     $("#modalTitle").text(title);
-      $("#modalBody").text(message);
-      $("#modalDialog").modal();
+    $("#modalTitle").text(title);
+    $("#modalBody").text(message);
+     $("#modalDialog").modal();
    }
  
 </script> 
