--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/producer_form.html
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/producer_form.html
@@ -68,11 +68,10 @@
      <h2>Manage Users | [[${pageTitle}]]</h2>
 
    </div>
-   <form class="form-control form-control-lg" th:action="@{/users/save}" 
+   <form class="form-control form-control-lg" th:action="@{/producers/save}" 
 		      method="post"
 			  style="max-width: 700px; margin: 0 auto"
-			  enctype="multipart/form-data"
-			  th:object="${user}" onsubmit="return checkEmailUnique(this);"> 
+			  th:object="${producer}" onsubmit="return checkEmailUnique(this);"> 
 			  <input type="hidden" th:field="*{id}"/>
 			<div>
 				<div class="form-group row">
@@ -97,10 +96,37 @@
 				</div>
 				
 				<div class="form-group row">
+					<label class="col-sm-4 col-form-label">Phone Number</label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control"  th:field="*{phoneNumber}" required minlength="4" max-length="128"/>
+					</div>
+				</div>
+				
+				<div class="form-group row">
+					<label class="col-sm-4 col-form-label">GeoLocation</label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control"  th:field="*{geolocation}" required minlength="4" max-length="128"/>
+					</div>
+				</div>
+				
+				<div class="form-group row">
+					<label class="col-sm-4 col-form-label">Address</label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control"  th:field="*{Address}" required minlength="4" max-length="128"/>
+					</div>
+				</div>
+				
+				<div class="form-group row">
+					<label class="col-sm-4 col-form-label">Altitude</label>
+					<div class="col-sm-8">
+						<input type="text" class="form-control"  th:field="*{altitude}" required minlength="4" max-length="128"/>
+					</div>
+				</div>
+				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Password</label>
 					<div class="col-sm-8">
-						<input th:if="${user.id == null}" type="password" class="form-control" th:field="*{password}" required minlength="8" max-length="20"/>
-						<input th:if="${user.id != null}" type="password" class="form-control" th:field="*{password}" minlength="8" max-length="20"/>
+						<input th:if="${producer.id == null}" type="password" class="form-control" th:field="*{password}" required minlength="8" max-length="20"/>
+						<input th:if="${producer.id != null}" type="password" class="form-control" th:field="*{password}" minlength="8" max-length="20"/>
 						
 					</div>
 				</div>	
@@ -125,17 +151,6 @@
 						<input type="checkbox" th:field="*{enabled}" />
 					</div>
 				</div>
-				
-				 <div class="form-group row">
-					<label class="col-sm-4 col-form-label">Photos:</label>
-					<div class="col-auto ml-2">					
-						<input type="file" id="fileImage" name="image" accept="image/png, image/jpeg"
-						class="mb-2" /> 
-						<img id="thumbnail" alt="Photos preview" th:src="@{${user.photosImagePath}}"
-						class="float-end"/>					
-					</div>
-				</div>
-				<br />
 				<div class="text-center">
 				<input type="submit" value="Save"  class="btn btn-primary mb-3">
 				<input type="button" value="Cancel" class="btn btn-secondary mb-3" id="buttonCancel">
@@ -165,40 +180,16 @@
   <script type="text/javascript">
      $(document).ready(function(){
      $("#buttonCancel").on("click", function(){
-     window.location="[[@{/users}]]";
-    });
+     window.location="[[@{/producers}]]";
   });
+});
 
-  $("#fileImage").change(function(){
-  fileSize = this.files[0].size;
-  alert("File size: " + fileSize);
-  
-  if(fileSize > 1048576){
-     this.setCustomValidity("You must choose an image less than 1MB!");
-     this.reportValidity();
-     
-     } else {
-     this.setCustomValidity("");
-      showImageThumbnail(this);
-  }
-  
-  });
-  
-  function showImageThumbnail(fileInput){
-     var file = fileInput.files[0];
-     var reader = new FileReader();
-     reader.onload = function(e) {
-     $("#thumbnail").attr("src", e.target.result);
-   };
-   
-   reader.readAsDataURL(file);
-   }
  function checkEmailUnique(form) {
-     url = "[[@{/users/check_email}]]";
-     userByEmail = $("#email").val();
-     userId = $("#id").val();
+     url = "[[@{/producers/check_email}]]";
+     producerByEmail = $("#email").val();
+     producerId = $("#id").val();
      csrfValue = $("input[name='_csrf']").val();
-     params = {id: userId,  email: userByEmail, _csrf: csrfValue};
+     params = {id: producerId,  email: producerByEmail, _csrf: csrfValue};
      
  
  
@@ -207,9 +198,9 @@
         form.submit();
     }else if(response == "Duplicated"){
     
-    // alert("There is another user having the same email " + userByEmail);
+    // alert("There is another user having the same email " + producerByEmail);
     
-      showModalDialog("Warning", "There is another user having the same email " + userByEmail);
+      showModalDialog("Warning", "There is another producer having the same email " + producerByEmail);
       } else {
          showModalDialog("Error", "Unknown response from server ");
          }
