--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user.html
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user.html
@@ -4,7 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, intial-scale=1.0, minimum-scale=1.0">
 <title>Home -Greencoffee Admin</title>
-<!--  --><link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}"/>-->
 <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}"/>
 <link rel="stylesheet" type="text/css" th:href="@{/style.css}"/>
 <link rel="stylesheet" type="text/css" th:href="@{webjars/bootstrap/css/bootstrap.min.css}">
@@ -24,6 +23,9 @@
          <ul class="navbar-nav">
            <li class="nav-item">
              <a class="nav-link" th:href="@{/users}">Users</a>
+          </li>
+           <li class="nav-item">
+             <a class="nav-link" th:href="@{/producers}">Producers</a>
           </li>
            <li class="nav-item">
              <a class="nav-link" th:href="@{/categories}">Categories</a>
@@ -82,30 +84,73 @@
         <tbody>
         <tr th:each="user : ${listUsers}">
         <td>[[${user.id}]]</td>
-        <td><span class="fas fa-portrait fa-3x icon-silver"></span></td>
+        <td>
+        <span th:if="${user.photos == null}"class="fas fa-portrait fa-3x icon-silver"></span>
+        <img th:if="${user.photos != null}" th:src="@{${user.photosImagePath}}"
+        style="width: 100px"/>
+        </td>
         <td>[[${user.email}]]</td>
         <td>[[${user.firstName}]]</td>
         <td>[[${user.lastName}]]</td>
         <td>[[${user.roles}]]</td>
         <td>
-        <a th:if="${user.enabled == true}" class="fas fa-check-circle fa-2x icon-green"></a>
-         <a th:if="${user.enabled == false}" class="fas fa-check-circle fa-2x icon-dark"></a>
-        </td>
+        <a class="fas fa-check-circle fa-2x icon-green" th:if="${user.enabled == true}"  
+           th:href="@{'/users/' + ${user.id} + '/enabled/false'}"
+           title="Disable this user"
+           ></a>
+        <a class="fas fa-circle fa-2x icon-dark" th:if="${user.enabled == false}" 
+           th:href="@{'/users/' + ${user.id} + '/enabled/true'}"
+           title="Enable this user"
+           ></a>
+        </td> 
         <td>
            <a class="fas fa-edit fa-2x icon-green" th:href="@{'/users/edit/' +${user.id}}"
            title="Edit this user"></a> 
            &nbsp;
-           <a class="fas fa-trash fa-2x icon-dark"></a> 
+           <a class="fas fa-trash fa-2x icon-dark link-delete" th:href="@{'/users/delete/' +${user.id}}"
+           th:userId="${user.id}"
+            title="Delete this user" ></a> 
         </td>
         </tr>
         </tbody>
      </table>
    </div>
    
-   
+     <div class="modal fade text-center"  id="confirmModal">
+		   <div class="modal-dialog">
+		      <div class="modal-content">
+		        <div class="modal-header">
+		           <h4 class="modal-title">Delete Confirmation</h4>
+		           <button type="button" class="close" data-dismiss="modal">&times;</button>
+		         </div>
+		      <div class="modal-body">
+		       <span id="confirmText"></span>
+		      </div>
+		    <div class="modal-footer">
+		      <a class="btn btn-success" href="" id="yesButton">Yes</a>
+		      <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+		    </div>
+		 </div>
+		 </div>
+		</div>
     <div class=text-center>
      <p>Greencoffee Control Panel Copyright &copy; Greencoffee</p>
    </div>
   </div>
+  <script type="text/javascript">
+  $(document).ready(function(){
+   
+    $(".link-delete").on("click", function(e){
+      e.preventDefault();
+      link = $(this);
+      //alert($(this).attr("href"));
+      userId = link.attr("userId");
+      $("#yesButton").attr("href", link.attr("href"));
+      $("#confirmText").text("Are you sure You want to delete this userID " + userId + "?");
+      $("#confirmModal").modal();
+    });
+    
+    });
+  </script>
 </body>
 </html>
