--- a/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user.html
+++ b/GreencoffeeProject/GreencoffeeWebParent/GreencoffeeBackEnd/src/main/resources/templates/user.html
@@ -114,8 +114,10 @@
         </tr>
         </tbody>
      </table>
-   </div>
-   
+    </div>
+    <div class="text-center m-1">
+          <span> Showing users # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
+    </div>
      <div class="modal fade text-center"  id="confirmModal">
 		   <div class="modal-dialog">
 		      <div class="modal-content">
